2013-07-14  Paul Eggert  <eggert@cs.ucla.edu>

	* callproc.c (child_setup, relocate_fd) [!DOS_NT]:
	* process.c (create_process) [!DOS_NT]:
	Remove now-unnecessary calls to emacs_close.

2013-07-13  Eli Zaretskii  <eliz@gnu.org>

	* w32term.c (x_draw_hollow_cursor): Delete the brush object when
	returning early.  (Bug#14850)

	* coding.c (syms_of_coding): Set up inhibit-null-byte-detection
	and inhibit-iso-escape-detection attributes of 'undecided'.
	(Bug#14822)

2013-07-13  Paul Eggert  <eggert@cs.ucla.edu>

	* deps.mk (sysdep.o): Remove dependency on ../lib/ignore-value.h.
	Reported by Herbert J. Skuhra in
	<http://lists.gnu.org/archive/html/emacs-devel/2013-07/msg00455.html>.

	Don't lose top specpdl entry when memory is exhausted.
	* eval.c (grow_specpdl): Increment specpdl top by 1 and check for
	specpdl overflow here, to simplify callers; all callers changed.
	Always reserve an unused entry at the stack top; this avoids
	losing the top entry's information when memory is exhausted.

2013-07-12  Paul Eggert  <eggert@cs.ucla.edu>

	Clean up errno reporting and fix some errno-reporting bugs.
	* callproc.c (Fcall_process):
	* fileio.c (Fcopy_file, Finsert_file_contents, Fwrite_region):
	* process.c (create_process, Fmake_network_process):
	* unexaix.c (report_error):
	* unexcoff.c (report_error):
	Be more careful about reporting the errno of failed operations.
	The code previously reported the wrong errno sometimes.
	Also, prefer report_file_errno to setting errno + report_file_error.
	(Fcall_process): Look at openp return value rather than at path,
	as that's a bit faster and clearer when there's a numeric predicate.
	* fileio.c (report_file_errno): New function, with most of the
	old contents of report_file_error.
	(report_file_error): Use it.
	(Ffile_exists_p, Ffile_accessible_directory_p):
	Set errno to 0 when it is junk.
	* fileio.c (Faccess_file):
	* image.c (x_create_bitmap_from_file):
	Use faccessat rather than opening the file, to avoid the hassle of